test/klee-out-13/test000017.assert.err
Error: ASSERTION FAIL: 0
File: /home/kevin/Develop/EMT/src/fmrt_t.c
Line: 42
assembly.ll line: 175
Stack: 
	#000000175 in fmrt_t (x, y, z) at /home/kevin/Develop/EMT/src/fmrt_t.c:42
	#100000201 in main () at /home/kevin/Develop/EMT/src/fmrt_t.c:54
